--- a/static/index.html
+++ b/static/index.html
@@ -12,11 +12,12 @@
             gap: 0;
             margin: 20px;
             border: 2px solid #333;
+            font-size: 0; /* Remove any potential whitespace */
         }
         .cell {
             width: 40px;
             height: 40px;
-            border: 1px solid #999;
+            border: none;
             cursor: pointer;
             margin: 0;
             padding: 0;
