--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,7 @@
         #grid-container {
             display: grid;
             grid-template-columns: repeat(3, 40px);
+            border: none;
             gap: 0;
             margin: 20px;
             border: 2px solid #333;
@@ -22,6 +23,14 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 16px;
+            font-family: Arial, sans-serif;
+            color: white;
+            text-shadow: 1px 1px 1px black;
+            user-select: none;
         }
         #color-picker {
             margin: 20px;
