--- a/static/index.html
+++ b/static/index.html
@@ -6,18 +6,26 @@
     <title>Color By Numbers</title>
     <link rel="stylesheet" href="/static/style.css">
     <style>
+        body {
+            margin: 0;
+            padding: 8px;
+            overflow: hidden;
+        }
+        h1 {
+            margin: 0;
+            padding: 4px;
+            font-size: 16px;
+        }
         #grid-container {
             display: grid;
-            grid-template-columns: repeat(3, 40px);
-            border: none;
+            grid-template-columns: repeat(64, 8px);
+            border: 1px solid #333;
             gap: 0;
-            margin: 20px;
-            border: 2px solid #333;
-            font-size: 0; /* Remove any potential whitespace */
+            margin: 4px auto;
         }
         .cell {
-            width: 40px;
-            height: 40px;
+            width: 8px;
+            height: 8px;
             border: none;
             cursor: pointer;
             margin: 0;
@@ -26,14 +34,14 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 16px;
+            font-size: 6px;
             font-family: Arial, sans-serif;
-            color: white;
-            text-shadow: 1px 1px 1px black;
+            color: rgba(255, 255, 255, 0.8);
+            text-shadow: 0px 0px 1px black;
             user-select: none;
         }
         #color-picker {
-            margin: 20px;
+            margin: 4px;
         }
         .color-button {
             width: 30px;
