--- a/static/index.html
+++ b/static/index.html
@@ -19,9 +19,9 @@
         #grid-container {
             display: grid;
             grid-template-columns: repeat(64, 12px);
-            border: 1px solid #333;
             gap: 0;
             margin: 4px auto;
+            /* removed the border: 1px solid #333; */
         }
         .cell {
             width: 12px;
@@ -36,8 +36,9 @@
             justify-content: center;
             font-size: 8px;
             font-family: Arial, sans-serif;
-            color: rgba(255, 255, 255, 0.8);
-            text-shadow: 0px 0px 1px black;
+            color: black;           /* Changed from rgba(255, 255, 255, 0.8) */
+            text-shadow: none;      /* Removed text shadow */
+            background-color: #ccc; /* Default grey background */
             user-select: none;
         }
         #color-picker {
