image and color loading is set

--- a/static/index.html
+++ b/static/index.html
@@ -51,6 +51,10 @@
             border: none;
             border-radius: 50%;
             cursor: pointer;
+            color: white;
+            text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+            font-weight: bold;
+            font-size: 12px;
         }
         .color-button.selected {
             border: 3px solid black;
