--- a/static/index.html
+++ b/static/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color By Numbers</title>
-    <link rel="stylesheet" href="/static/style.css">
     <style>
         body {
             margin: 0;
             padding: 8px;
             overflow: hidden;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f8f9fa;
         }
         h1 {
             margin: 0;
@@ -70,6 +72,27 @@
             margin-top: 4px;
             cursor: pointer;
         }
+        .spinner {
+            display: none;
+            width: 20px;
+            height: 20px;
+            border: 4px solid black;
+            border-radius: 50%;
+            border-top-color: transparent;
+            animation: spin 1s linear infinite;
+            margin-top: 10px;
+        }
+        
+        @keyframes spin {
+            to { transform: rotate(360deg); }
+        }
+
+        /* Add this to ensure proper vertical layout */
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
     </style>
 </head>
 <body>
@@ -77,7 +100,10 @@
     <div id="color-picker"></div>
     <div class="container">
         <div id="grid-container"></div>
-        <button id="populate-btn">Populate</button>
+        <div class="button-container">
+            <button id="populate-btn">Populate</button>
+            <div id="spinner" class="spinner"></div>
+        </div>
     </div>
     <script src="/static/script.js"></script>
 </body>
